tests/conf_invalid.expected
Error:
  expected a valid Perl regex
  13 |   (sat "))) ^SATISFIABLE")
             ^^^^^^^^^^^^^^^^^^
  ------------------------------------------------------------
Context:
  expected a stanza
  10 | (prover
  11 |   (name minisat)
  12 |   (unsat "UNSATISFIABLE")
  13 |   (sat "))) ^SATISFIABLE")
  14 |   (cmd "minisat -cpu-lim=$timeout $file").
  
